--- a/styles/style.css
+++ b/styles/style.css
@@ -296,7 +296,7 @@ body {
 /* MAP */
 
 .contacts {
-  background-image: url(/images/map.png);
+  background-image: url(../images/map.png);
   height: 416px;
   width: 1440px;
   margin: 0 auto;
