--- a/styles/style.css
+++ b/styles/style.css
@@ -296,11 +296,7 @@ body {
 /* MAP */
 
 .contacts {
-<<<<<<< HEAD
-  background-image: url(../svg/map.PNG);
-=======
-  background-image: url(../images/map.png);
->>>>>>> aac1670d1e75ae0b07a8b0ada153a228bf023d8a
+  background-image: url(../svg/map.png);
   height: 416px;
   width: 1440px;
   margin: 0 auto;
