--- a/styles/style.css
+++ b/styles/style.css
@@ -310,6 +310,7 @@ body {
   background-position: center center;
   min-width: 1220px;
   height: 416px;
+  margin: 0 auto;
 }
 .map {
   display: flex;
